feat: Remove unused imports from DTOs and services for cleaner code